cmake_minimum_required(VERSION 3.15)
project(CLion)

set(CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")


#add_executable(a 671a.cpp)
#add_executable(b 671b.cpp)
#add_executable(c 671c.cpp)
#add_executable(d 671d.cpp)
#add_executable(e 671e.cpp)
add_executable(is InversionSum.cpp)